test_scores/negative_dimers/features/Q9ULU8.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q9ULU8.pkl.xz